fix settings alignment

--- a/passgen/styles.css
+++ b/passgen/styles.css
@@ -276,7 +276,7 @@ Settings
   border-radius: 8px;
   display: flex;
   align-items: center;
-  padding: 10px 25px;
+  padding: 10px 12px;
   color: #fff;
   margin-bottom: 8px;
 }
